message-api/message-api/deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
    labels:
        name: message-api
    name: message-api
    namespace: dev
spec:
    replicas: 2
    template:
        metadata:
            labels:
                app: message-api
        spec:
            containers:
                -
                    name: message-api
                    image: 'message-api:v1'
                    ports:
                        - containerPort: 5000
