message-api/message-api/svc.yml
apiVersion: v1
kind: Service
metadata:
    name: message-api
    namespace: dev
spec:
    ports:
        -
            port: 80
            targetPort: 5000
    selector:
        app: message-api
