message-api/message-api/ing.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: message-api
    namespace: dev
    annotations:
        kubernetes.io/ingress.class: nginx
spec:
    rules:
        -
            http:
                paths:
                    -
                        path: /
                        backend:
                            serviceName: message-api
                            servicePort: 80
            host: dev.mymachine.com
